--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%=title%></title>
+    <title>
+        <%=title%>
+    </title>
     <style>
-        body{
+        body {
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
         }
-        form{
-            background-color: rgb(37, 37, 78);
-            border-radius: 20px;
+
+        form {
+            background-color: rgb(144, 190, 243);
+            border-radius: 30px;
             padding: 2%;
             margin-top: 10%;
             display: flex;
@@ -20,20 +25,25 @@
             justify-content: center;
             flex-direction: column;
         }
-        input{
-            margin-top: 5%;
+
+        input {
+            margin-top: 8%;
+            border-radius: 10px;
         }
     </style>
 </head>
+
 <body>
+    <h1>Add new User</h1>
     <form action="/users/create" enctype="multipart/form-data" method="post">
         <input type="text" name="name" placeholder="Name">
         <input type="number" name="age" placeholder="Age">
-        <input type="number"name="rollno" placeholder="Rollno">
+        <input type="number" name="rollno" placeholder="Rollno">
         <input type="email" name="email" placeholder="Email">
-        <input type="number"name="score" placeholder="Score">
+        <input type="number" name="score" placeholder="Score">
         <input type="file" name="avatar" placeholder="Profile-Picture">
         <input type="submit" value="Submit">
     </form>
 </body>
+
 </html>
