--- a/views/Allusers.ejs
+++ b/views/Allusers.ejs
@@ -17,23 +17,23 @@
         <div class="row">
             <%for(user of users){%>
                 <div class="card" style="height: 60vh; width: 25vw; overflow: scroll; margin: 5%;">
-                    <img style="width: 100%; height: 55%;border-radius: 50%;" src="<%=user.avatar%>"
+                    <img style="width: 55%; height: 55%;border-radius: 50%;" src="<%=user.avatar%>"
                         class="card-img-top" alt="<%=user.name%>">
                     <div class="card-body">
                         <ul class="list-group">
-                            <li class="list-group-item"><span>Name </span>
+                            <li class="list-group-item"><strong>Name </strong>
                                 <%=user.name%>
                             </li>
-                            <li class="list-group-item"> <span>Email </span>
+                            <li class="list-group-item"> <strong>Email </strong>
                                 <%=user.email%>
                             </li>
-                            <li class="list-group-item"> <span>Age </span>
+                            <li class="list-group-item"> <strong>Age </strong>
                                 <%=user.age%>
                             </li>
-                            <li class="list-group-item"> <span>Rollno </span>
+                            <li class="list-group-item"> <strong>Rollno </strong>
                                 <%=user.rollno%>
                             </li>
-                            <li class="list-group-item"><span>Score </span>
+                            <li class="list-group-item"><strong>Score </strong>
                                 <%=user.score%>
                             </li>
                         </ul>
